--- a/BIZspot-frontend/src/styles.css
+++ b/BIZspot-frontend/src/styles.css
@@ -1900,15 +1900,19 @@ body {
   position: relative;
   right: -12rem;
   border-radius: 1rem;
-  background-size: cover;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(91, 232, 155, 0),
-      rgba(91, 232, 155, 0.8)
-    ),
-    url(assets/img/right_bg.jpg);
+  overflow: hidden;
+  
 }
-
+.section-story__right > img {
+  width: 100%;
+  height: auto;
+  background-size: cover;
+  background-color: linear-gradient(
+    to bottom,
+    rgba(91, 232, 155, 0),
+    rgba(91, 232, 155, 0.8)
+  );
+}
 .section-pricing {
   height: 100vh;
   background-color: #f7f7f7;
@@ -1959,14 +1963,14 @@ body {
   background-color: #f7f7f7;
   width: 75%;
   margin: 0 auto;
-  overflow-y: scroll;
+  
 }
 .feed-element-box {
   margin: 0 auto;
   max-width: 1200px;
   max-height: 100%;
-  padding: 0rem 8rem;
-  overflow-y: scroll;
+  padding: 0.5rem 8rem;
+  
 }
 .feed-user {
   margin-top: 2rem;
