--- a/BIZspot-frontend/src/styles.css
+++ b/BIZspot-frontend/src/styles.css
@@ -1439,11 +1439,12 @@ body {
   margin-top: 8rem;
   cursor: pointer;
   display: block;
-  box-shadow: 0rem 2.5rem 3.5rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .business-box {
   background-color: #f7f7f7;
+
 }
 
 .business-picture {
@@ -1457,7 +1458,7 @@ body {
 }
 
 .business-data {
-  padding: 2rem;
+  padding: 0 2rem 1rem 1rem;
 }
 
 .business-title {
@@ -1730,7 +1731,7 @@ body {
 
 .search-box-up {
   max-width: 100vw;
-  padding: 3rem;
+  padding: 3rem 4rem 0 4rem;
 }
 
 .search-box-down {
@@ -1738,6 +1739,12 @@ body {
   max-height: 85vh;
   margin: 0px;
   overflow-y: scroll;
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr ;
+  grid-column-gap: 3rem;
+}
+.search-box-down > div{
+  width: 100%;  
 }
 
 .subscription {
