fixing interceptor wrong behavior

--- a/BIZspot-frontend/src/app/navbar/navbar.component.html
+++ b/BIZspot-frontend/src/app/navbar/navbar.component.html
@@ -37,11 +37,7 @@
   </div>
   <div class="navigation__nav ">
     <ul class="navigation__list ">
-      <li class="navigation__item">
-        <a routerLink="/create" class="outline success">
-          <i class="fas fa-building"></i>Create First BIZ
-        </a>
-      </li>
+      
       <li class="navigation__item">
         <a routerLink="/search" class="navigation__link">
           <i class="fas fa-globe-africa"></i>
@@ -50,6 +46,11 @@
       <li class="navigation__item">
         <a routerLink="/feed" class="navigation__link">
           <i class="fas fa-rss"></i>
+        </a>
+      </li>
+      <li class="navigation__item">
+        <a routerLink="/create" class="navigation__link">
+          <i class="fas fa-building"></i>
         </a>
       </li>
       <li class="navigation__item">
