--- a/BIZspot-frontend/src/app/search/search.component.html
+++ b/BIZspot-frontend/src/app/search/search.component.html
@@ -55,8 +55,8 @@
         formControlName="reviews"
         value="top"
       >
-        <option value="top" selected>Top Reviews</option>
-        <option value="worst">Worst Reviews</option>
+        <option value="top" selected>With Top Reviews</option>
+        <option value="worst">With Latest Reviews</option>
       </select>
       <div class="search-form-actions">
         <a class="search-btn search-btn--stroked" (click)="popupClicked()"
@@ -129,7 +129,10 @@
     </div>
   </div>
   <!-- maximum 3 biz cards in each row -->
-  <div class="row search-box-down" *ngIf="filteredBusinesses.matches.length != 0">
+  <div
+    class="row search-box-down"
+    *ngIf="filteredBusinesses.matches.length != 0"
+  >
     <div *ngFor="let biz of filteredBusinesses.matches">
       <app-business [business]="biz"></app-business>
     </div>
