--- a/BIZspot-frontend/src/app/lost/lost.component.html
+++ b/BIZspot-frontend/src/app/lost/lost.component.html
@@ -1,1 +1,12 @@
-<p>lost works!</p>
+<main class="notfound">
+		<h3 class="notfound-title">404 NOT FOUND !</h3>
+		<h5 class="notfound-text">This is a wrong path please verify the destination before pasting the link<br> You can visit one of the following links to get back on track</h5>
+		<ul class="notfound-nav">
+  
+		<li class="notfound-nav-item"><a class="notfound-nav-link" routerLink="/">Home </a></li>
+		<li class="notfound-nav-item"><a class="notfound-nav-link" routerLink="/signup">Registration </a></li>
+  
+		<li class="notfound-nav-item"><a class="notfound-nav-link" routerLink="/login">Login </a></li>
+  
+		</ul>
+	  </main>
