--- a/BIZspot-frontend/src/app/business-details/business-details.component.html
+++ b/BIZspot-frontend/src/app/business-details/business-details.component.html
@@ -17,17 +17,17 @@
     <ul class="business-page-data">
       <li>Title: {{ this.business?.title }}</li>
       <li>Category: {{ this.category?.name }}</li>
-      <li>Country: {{ this.location?.country }}</li>
-      <li>State: {{ this.location?.state }}</li>
+      <!--<li>Country: {{ this.location?.country }}</li>-->
+      <!--<li>State: {{ this.location?.state }}</li>-->
       <li>Locality: {{ this.location?.locality }}</li>
       <li>Street Number: {{ this.location?.number }}</li>
-      <li>Postal Code: {{ this.location?.postal_code }}</li>
+      <!--<li>Postal Code: {{ this.location?.postal_code }}</li> -->
       <li>Phone Number: {{ this.business?.number }}</li>
-      <br />
+      
       <li>Level: {{ this.business?.level }}</li>
     </ul>
     <p class="business-page-description">
-      About Us: {{ this.business?.about }}
+       {{ this.business?.about }}
     </p>
     <div class="business-page-actions">
       <a
