--- a/BIZspot-frontend/src/app/notification/notification.component.css
+++ b/BIZspot-frontend/src/app/notification/notification.component.css
@@ -3,10 +3,11 @@
 	font-size: 1.6rem;
 	color: #fff;
 	background-color: #999;
-	display: inline-block;
+	display: block;
 	padding: 1rem 3.5rem 1rem 2rem;
 	margin: 1rem 2rem;
 	border-radius: 1rem;
+	margin: 0 aut;
 	min-height: 5rem;
 	min-width: 10rem; }
 	.notification-text {
