--- a/BIZspot-frontend/src/styles.css
+++ b/BIZspot-frontend/src/styles.css
@@ -21,12 +21,7 @@ $breakpoint argument choices:
 @font-face {
   font-family: "AktivGrotesk";
   src: url("assets/font/AktivGrotesk-Medium.eot");
-  src: url("assets/font/AktivGrotesk-Medium.eot?#iefix")
-      format("embedded-opentype"),
-    url("assets/font/AktivGrotesk-Medium.svg#AktivGrotesk-Medium") format("svg"),
-    url("assets/font/AktivGrotesk-Medium.ttf") format("truetype"),
-    url("assets/font/AktivGrotesk-Medium.woff") format("woff"),
-    url("assets/font/AktivGrotesk-Medium.woff2") format("woff2");
+  src: url("assets/font/AktivGrotesk-Medium.eot?#iefix") format("embedded-opentype"), url("assets/font/AktivGrotesk-Medium.svg#AktivGrotesk-Medium") format("svg"), url("assets/font/AktivGrotesk-Medium.ttf") format("truetype"), url("assets/font/AktivGrotesk-Medium.woff") format("woff"), url("assets/font/AktivGrotesk-Medium.woff2") format("woff2");
 }
 
 *,
@@ -145,7 +140,6 @@ body {
   /*font-size: 16px;*/
   line-height: 1.7;
   color: #777;
-  
 }
 
 .heading-primary {
@@ -274,11 +268,7 @@ body {
 
 .header {
   min-height: 85vh;
-  background-image: linear-gradient(
-    to top,
-    rgba(91, 232, 155, 0.6),
-    rgba(45, 58, 113, 0.6)
-  );
+  background-image: linear-gradient( to top, rgba(91, 232, 155, 0.6), rgba(45, 58, 113, 0.6));
   position: relative;
   /*@supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)){
 		-webkit-clip-path: polygon(0 0,100% 0, 100% 80%, 0 100%);
@@ -288,14 +278,9 @@ body {
 }
 
 @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-  (min-width: 125em) {
+(min-width: 125em) {
   .header {
-    background-image: linear-gradient(
-        to top,
-        rgba(91, 232, 155, 0.8),
-        rgba(45, 58, 113, 0.8)
-      ),
-      url(assets/img/background.jpg);
+    background-image: linear-gradient( to top, rgba(91, 232, 155, 0.8), rgba(45, 58, 113, 0.8)), url(assets/img/background.jpg);
   }
 }
 
@@ -783,30 +768,15 @@ body {
 }
 
 .card__side--front-1 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(91, 232, 155, 0.8)
-    ),
-    url(assets/img/map1.jpg);
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.3), rgba(91, 232, 155, 0.8)), url(assets/img/map1.jpg);
 }
 
 .card__side--front-2 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(91, 232, 155, 0.8)
-    ),
-    url(assets/img/map2.jpg);
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.3), rgba(91, 232, 155, 0.8)), url(assets/img/map2.jpg);
 }
 
 .card__side--front-3 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(91, 232, 155, 0.8)
-    ),
-    url(assets/img/map3.jpg);
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.3), rgba(91, 232, 155, 0.8)), url(assets/img/map3.jpg);
 }
 
 .card__side--back {
@@ -814,27 +784,15 @@ body {
 }
 
 .card__side--back-1 {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.8),
-    rgba(238, 238, 238, 0.8)
-  );
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.8), rgba(238, 238, 238, 0.8));
 }
 
 .card__side--back-2 {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.8),
-    rgba(250, 169, 26, 0.8)
-  );
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.8), rgba(250, 169, 26, 0.8));
 }
 
 .card__side--back-3 {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.8),
-    rgba(45, 58, 113, 0.8)
-  );
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.8), rgba(45, 58, 113, 0.8));
 }
 
 .card:hover .card__side--front {
@@ -920,7 +878,8 @@ body {
   font-weight: 100;
 }
 
-@media only screen and (max-width: 56.25rem), only screen and (hover: none) {
+@media only screen and (max-width: 56.25rem),
+only screen and (hover: none) {
   .card {
     height: auto;
     border-radius: 0.3rem;
@@ -1067,7 +1026,7 @@ body {
   transition: all 0.3s ease-out;
 }
 
-.form__input:placeholder-shown + .form__label {
+.form__input:placeholder-shown+.form__label {
   visibility: hidden;
   opacity: 0;
   transform: translateY(-4rem);
@@ -1127,7 +1086,7 @@ body {
   transition: opactiy 0.2s;
 }
 
-.form__radio-input:checked ~ .form__radio-label > .form__radio-button::after {
+.form__radio-input:checked~.form__radio-label>.form__radio-button::after {
   opacity: 1;
 }
 
@@ -1139,12 +1098,7 @@ body {
 
 .signin-left {
   min-height: 100vh;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(45, 58, 113, 0.5),
-      rgba(91, 232, 155, 0.5)
-    ),
-    url(assets/img/worker.jpg);
+  background-image: linear-gradient( to bottom, rgba(45, 58, 113, 0.5), rgba(91, 232, 155, 0.5)), url(assets/img/worker.jpg);
   background-size: 100%;
   margin: 0;
 }
@@ -1231,12 +1185,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(45, 58, 113, 0.5),
-      rgba(91, 232, 155, 0.5)
-    ),
-    url(assets/img/background.jpg);
+  background-image: linear-gradient( to bottom, rgba(45, 58, 113, 0.5), rgba(91, 232, 155, 0.5)), url(assets/img/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -1273,9 +1222,11 @@ body {
   max-width: 100vw;
   margin: 0px;
 }
+
 .profile-form {
   padding-top: 5rem;
 }
+
 .profile-avatar {
   display: block;
   margin: 2rem auto -2rem auto;
@@ -1284,16 +1235,19 @@ body {
   border-radius: 50%;
   overflow: hidden;
 }
-.profile-avatar > img {
+
+.profile-avatar>img {
   width: 100%;
   height: auto;
 }
+
 .profile-avatar-btn {
   padding: 0.5rem 1rem;
   border: none;
   font-size: 1.6rem;
   margin: 0 auto;
 }
+
 .profile-btn {
   margin: 15rem auto 0 auto;
   display: block;
@@ -1304,6 +1258,7 @@ body {
   border: 2px solid #2d3a71;
   transition: transform 0.2s;
 }
+
 .profile-btn-box {
   display: block;
   font-size: 2rem;
@@ -1311,9 +1266,11 @@ body {
   text-align: center;
   cursor: pointer;
 }
+
 .profile-btn:hover {
   transform: scale(1.3);
 }
+
 .profile-btn::after {
   content: "";
   display: block;
@@ -1326,11 +1283,13 @@ body {
   border-radius: 50%;
   background-color: #2d3a71;
 }
+
 .profile-mid {
   display: flex;
   flex-flow: column;
   justify-content: center;
 }
+
 .profile-left,
 .profile-right {
   min-height: 100vh;
@@ -1370,14 +1329,17 @@ body {
 .creation-left {
   padding: 5rem 1rem;
 }
-.creation > .row {
+
+.creation>.row {
   margin-bottom: 0;
 }
+
 .creation-mid {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
 .payement-box {
   padding: 1rem;
   width: 100%;
@@ -1409,6 +1371,7 @@ body {
   transition: margin 0.3s;
   border: solid 0.3rem #777;
 }
+
 .payement-offer-btn {
   cursor: pointer;
   border: none;
@@ -1421,31 +1384,46 @@ body {
   bottom: 0;
   transform: translate(-50%, 50%);
 }
+
+.payement-offer-price {
+  color: #5be89b;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 3rem;
+  margin: 0 3.5rem
+}
+
 .payement-offer-btn:hover {
   background-color: #5be89b;
   color: #252d2f;
 }
+
 .payement-offer-title {
   color: #2d3a71;
   font-size: 1.9rem;
   margin: 2rem 0;
 }
+
 .payement-offer-options {
   list-style: none;
   width: 100%;
   margin: 0 auto;
   color: #000;
 }
+
 .payement-offer-option {
   text-align: center;
   padding: 0.5rem;
 }
+
 .payement-offer-option:not(:last-child) {
   border-bottom: 1px solid #2d3a71;
 }
+
 .payement-offer:hover {
   border: solid 0.3rem #5be89b;
 }
+
 .business {
   margin-top: 8rem;
   cursor: pointer;
@@ -1461,7 +1439,8 @@ body {
   height: 35vh;
   overflow: hidden;
 }
-.business-picture > img {
+
+.business-picture>img {
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -1496,9 +1475,10 @@ body {
 }
 
 .review {
-  margin: 0;
+ 
   padding: 1.5rem 3rem;
   border-bottom: 2px solid #2d3a71;
+  width: 100%;
 }
 
 .review-btn {
@@ -1509,12 +1489,25 @@ body {
   text-align: center;
   color: #2d3a71;
 }
+.review-delete{
+  border: 0;
+  background-color: #ed2227;
+  color:#fff;
+  padding:0.5rem;
+  border-radius: 5px;
+  margin-left: 1rem;
+  cursor: pointer;
+}
 
 .review-header {
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  
+}
+.review-header > *:not(:first-child){
+  margin-left: 1rem;
 }
 
 .review-text {
@@ -1548,6 +1541,7 @@ body {
   display: inline-block;
   color: #5be89b;
 }
+
 .outline {
   border: 2px solid black;
   background-color: white;
@@ -1564,6 +1558,7 @@ body {
 }
 
 /* Green */
+
 .success {
   border-color: rgb(82, 212, 184);
   color: rgb(31, 179, 142);
@@ -1622,7 +1617,6 @@ body {
   transform: translate(-50%, -50%) scale(1);
   border-radius: 0.3rem;
   display: table;
-
   opacity: 1;
   transition: all 0.2s ease-in-out 0.2s;
 }
@@ -1777,7 +1771,8 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 3rem;
 }
-.search-box-down > div {
+
+.search-box-down>div {
   width: 100%;
 }
 
@@ -1804,7 +1799,7 @@ body {
   overflow: hidden;
 }
 
-.subscription-image > img {
+.subscription-image>img {
   max-width: 100%;
   max-height: auto;
 }
@@ -1831,7 +1826,7 @@ body {
   width: 100%;
 }
 
-.settings__form > * {
+.settings__form>* {
   margin: 2rem 0;
 }
 
@@ -1900,9 +1895,7 @@ body {
   transition: opactiy 0.2s;
 }
 
-.settings__radio-input:checked
-  ~ .settings__radio-label
-  > .settings__radio-button::after {
+.settings__radio-input:checked~.settings__radio-label>.settings__radio-button::after {
   opacity: 1;
 }
 
@@ -1944,16 +1937,13 @@ body {
   overflow: hidden;
 }
 
-.section-story__right > img {
+.section-story__right>img {
   width: 100%;
   height: auto;
   background-size: cover;
-  background-color: linear-gradient(
-    to bottom,
-    rgba(91, 232, 155, 0),
-    rgba(91, 232, 155, 0.8)
-  );
+  background-color: linear-gradient( to bottom, rgba(91, 232, 155, 0), rgba(91, 232, 155, 0.8));
 }
+
 .section-pricing {
   height: 100vh;
   background-color: #f7f7f7;
@@ -1981,11 +1971,7 @@ body {
 .section-book {
   height: 100vh;
   padding: 15rem 0;
-  background-image: linear-gradient(
-    to top,
-    rgba(91, 232, 155, 0.8),
-    rgba(45, 58, 113, 0.8)
-  );
+  background-image: linear-gradient( to top, rgba(91, 232, 155, 0.8), rgba(45, 58, 113, 0.8));
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -2000,20 +1986,24 @@ body {
   overflow-y: scroll;
   background-color: #eeeeee;
 }
+
 .feed-main {
   background-color: #f7f7f7;
   width: 75%;
   margin: 0 auto;
 }
+
 .feed-element-box {
   margin: 0 auto;
   max-width: 1200px;
   max-height: 100%;
   padding: 0.5rem 8rem;
 }
+
 .feed-user {
   margin-top: 2rem;
 }
+
 .feed-user-avatar {
   display: block;
   margin: 0 auto;
@@ -2023,13 +2013,16 @@ body {
   border: 0.2rem solid #2d3a71;
   border-radius: 50%;
 }
-.feed-user-avatar > img {
+
+.feed-user-avatar>img {
   width: 100%;
   height: auto;
 }
+
 .feed-top {
   margin-top: 2rem;
 }
+
 .feed-top-avatar {
   display: block;
   margin: 0 auto;
@@ -2038,10 +2031,12 @@ body {
   overflow: hidden;
   border: 0.2rem solid #5be89b;
 }
-.feed-top-avatar > img {
+
+.feed-top-avatar>img {
   width: 100%;
   height: auto;
 }
+
 .feed-section-left {
   background-color: #252d2f;
   min-width: 200px;
@@ -2051,18 +2046,21 @@ body {
   left: 0;
   text-align: center;
 }
+
 .feed-section-left-title {
   padding-top: 1rem;
   color: #5be89b;
   font-size: 1.8rem;
   font-weight: lighter;
 }
+
 .feed-section-left-text {
   margin-top: 2rem;
   font-size: 1.6rem;
   color: #fff;
   font-weight: 100;
 }
+
 .feed-section-right {
   background-color: #252d2f;
   min-width: 200px;
@@ -2072,6 +2070,7 @@ body {
   bottom: 0;
   right: 0;
 }
+
 .feed-section-right-text {
   margin-top: 2rem;
   font-size: 1.6rem;
@@ -2110,7 +2109,7 @@ body {
   margin: 0 auto;
 }
 
-.business-page-review-form > input {
+.business-page-review-form>input {
   border: none;
   box-shadow: none;
   height: 100%;
@@ -2130,12 +2129,12 @@ body {
   background-color: #252d2f;
 }
 
-.business-page-pictures > img {
+.business-page-pictures>img {
   height: 10rem;
   width: auto;
 }
 
-.business-page-pictures > img:not(:last-child) {
+.business-page-pictures>img:not(:last-child) {
   margin-right: 2rem;
 }
 
@@ -2156,7 +2155,7 @@ body {
   list-style: none;
 }
 
-.business-page-data > li {
+.business-page-data>li {
   list-style: none;
 }
 
@@ -2237,7 +2236,7 @@ body {
   overflow: hidden;
 }
 
-.business-page-map > img {
+.business-page-map>img {
   background-size: cover;
   margin: 0 auto;
   display: block;
